<resources>

    // APP name
    <string name="app_name">Home Automation Platform</string>
    <string name="app_nickname">HAP</string>

    // Labels
    <string name="main_room_label">Room</string>
    <string name="room_label">Room:</string>
    <string name="devices_label">Devices</string>
    <string name="name_label">Name:</string>
    <string name="type_label">Type:</string>
    <string name="function_label">Function:</string>
    <string name="topic_label">Topic:</string>
    <string name="id_label">ID:</string>
    <string name="time_label">Time:</string>
    <string name="ldr_label">LDR</string>
    <string name="ldr_reading_label">Reading:</string>
    <string name="ldr_threshold_label">Threshold:</string>
    <string name="add_device_label">Add device</string>
    <string name="discovered_label">Devices found</string>
    <string name="device_selection_label">Select the device type</string>
    <string name="camera_label">Camera</string>
    <string name="firmware_label">Firmware</string>
    <string name="current_firmware_label">Current:</string>
    <string name="latest_firmware_label">Latest:</string>
    <string name="language_selection_label">Select the language:</string>
    <string name="english_label">English</string>
    <string name="portuguese_label">Portuguese</string>
    <string name="rooms_tab_label">Rooms</string>
    <string name="devices_tab_label">Devices</string>
    <string name="log_tab_label">Log</string>
    <string name="all_rooms_label">All</string>

    // Buttons
    <string name="confirm_button">Confirm</string>
    <string name="cancel_button">Cancel</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>

    // Hints
    <string name="logo_hint">HAP icon</string>
    <string name="location_name_hint">Room name</string>
    <string name="device_name_hint">Device name</string>
    <string name="device_id_hint">Device ID</string>
    <string name="device_room_hint">Device room</string>
    <string name="device_topic_hint">Device topic</string>

    // Descriptions
    <string name="room_add_description">Add new room</string>
    <string name="device_add_description">Add new device</string>
    <string name="device_search_description">Search devices</string>
    <string name="device_keyboard_description">Manually insert devices</string>
    <string name="room_open_description">Show room information</string>
    <string name="configuration_button_description">Open configuration screen</string>
    <string name="language_button_description">Select the language</string>
    <string name="lamp_control_description">Turn lamp ON/OFF</string>
    <string name="socket_control_description">Turn socket ON/OFF</string>
    <string name="door_control_description">Open/close door</string>
    <string name="air_control_description">Turn air conditioner ON/OFF</string>
    <string name="camera_control_description">Watch streaming</string>
    <string name="temperature_up_button_description">Increase temperature</string>
    <string name="temperature_down_button_description">Decrease temperature</string>
    <string name="device_config_description">Configure device</string>
    <string name="device_delete_description">Delete device</string>
    <string name="room_config_description">Configure room</string>
    <string name="room_delete_description">Delete room</string>
    <string name="firmware_update_description">Update firmware</string>

    //  Messages
    <string name="connection_check_message">Checking connection</string>
    <string name="local_connection_message">Connected via local network</string>
    <string name="vpn_connection_message">Connected via VPN</string>
    <string name="vpn_check_message">Checking VPN</string>
    <string name="vpn_installation_error_message">ZeroTier One APP is required.\nProceed with installation?</string>
    <string name="vpn_connection_error_message">ZeroTier One not connected.\nProceed with connection?</string>
    <string name="server_check_message">Connecting to server</string>
    <string name="server_error_message">Server connection failed.\nTry again?</string>
    <string name="database_check_message">Loading data</string>
    <string name="database_error_message">Data update failed.\nTry again?</string>
    <string name="confirm_device_delete_message">Confirm device deletion?</string>
    <string name="confirm_room_delete_message">Confirm room deletion?</string>
    <string name="firmware_updated_message">Firmware up to date</string>
    <string name="firmware_not_updated_message">Update available</string>
    <string name="firmware_updating_message">Updating…</string>
    <string name="log_device_message">"Device "</string>
    <string name="log_room_message">"Room "</string>
    <string name="log_device_add_message">" added to "</string>
    <string name="log_room_add_message">" added"</string>
    <string name="log_delete_message">" deleted"</string>
    <string name="log_configure_message">" updated as "</string>
    <string name="log_device_room_message">" in "</string>

    // Units
    <string name="temperature_unit">°C</string>

</resources>